--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>highsec.microservice.springcloud</groupId>
     <artifactId>HighSec-MicroServices</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>springcloud-provider-datainfo8001</module>
+        <module>springcloud-consumer-feignclient80</module>
+    </modules>
     <packaging>pom</packaging>
 
     <!--统一jar包和版本号的管理-->
