--- a/springcloud-consumer-ribbonclient80/pom.xml
+++ b/springcloud-consumer-ribbonclient80/pom.xml
@@ -9,8 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springcloud-provider-datainfo8001</artifactId>
+    <artifactId>springcloud-consumer-ribbonclient80</artifactId>
 
+    <!--引入真正的依赖-->
     <dependencies>
 
         <!--引入自定义的api通用包，可以使用Payment支付Entity-->
@@ -28,26 +29,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
 
         <!--引入热部署，修改代码自动进行编译，不用重启-->
@@ -70,6 +51,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-
 </project>
