--- a/springcloud-api-commons/pom.xml
+++ b/springcloud-api-commons/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <!--微服务中的工程重构，将通用的实体类提出成一个Module-->
     <artifactId>springcloud-api-commons</artifactId>
 
     <dependencies>
