完成单个Eureka Server7001编写，并进行整合

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>springcloud-consumer-ribbonclient80</module>
         <module>springcloud-api-commons</module>
         <module>springcloud-eureka-server7001</module>
+        <module>springcloud-eureka-server7002</module>
     </modules>
     <packaging>pom</packaging>
 
