--- a/springcloud-eureka-server7001/src/main/resources/application.yaml
+++ b/springcloud-eureka-server7001/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 
 eureka:
   instance:
-    hostname: localhost #eureka服务端的实例主机名称
+    hostname: eureka7001.com #eureka服务端的实例主机名称
     appname: cloud-eureka-server # 服务名，默认取 spring.application.name 配置值，如果没有则为 unknown
     instance-id: eureka-server-instance1 # 实例ID
     prefer-ip-address: true #客户端在注册时使用自己的IP而不是主机名，缺省：false
@@ -14,4 +14,5 @@ eureka:
     fetch-registry: false #false表示自己端就是服务中心，只需要去维护实例，不需要检索服务
     service-url:
       #设置与Eureka Server交互的地址，查询服务和注册服务都需要依赖这个地址
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+#      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/ #单个Eureka Server版
+      defaultZone: http://eureka7002.com:7002/eureka/ #互相注册，互相守望
