--- a/springcloud-eureka-server7002/pom.xml
+++ b/springcloud-eureka-server7002/pom.xml
@@ -11,5 +11,50 @@
 
     <artifactId>springcloud-eureka-server7002</artifactId>
 
+    <!--引入真正的依赖-->
+    <dependencies>
 
+        <!--Eureka Server 2.x-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+        </dependency>
+
+        <!--引入自定义的api通用包，可以使用Payment支付Entity-->
+        <dependency>
+            <groupId>highsec.microservice.springcloud</groupId>
+            <artifactId>springcloud-api-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <!--引入热部署，修改代码自动进行编译，不用重启-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
