实现微服务提供者集群8001和8002，并做相应整合，更改消费者的负载均衡算法为随机

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>springcloud-api-commons</module>
         <module>springcloud-eureka-server7001</module>
         <module>springcloud-eureka-server7002</module>
+        <module>springcloud-provider-datainfo8002</module>
     </modules>
     <packaging>pom</packaging>
 
