--- a/springcloud-provider-datainfo8001/src/main/resources/application.yml
+++ b/springcloud-provider-datainfo8001/src/main/resources/application.yml
@@ -44,3 +44,4 @@ eureka:
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka #集群版
   instance:
     prefer-ip-address: true
+    instance-id: eureka-client-provider1
