--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>springcloud-eureka-server7001</module>
         <module>springcloud-eureka-server7002</module>
         <module>springcloud-provider-datainfo8002</module>
+        <module>springcloud-gateway-gateway9001</module>
     </modules>
     <packaging>pom</packaging>
 
