--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>springcloud-eureka-server7002</module>
         <module>springcloud-provider-datainfo8002</module>
         <module>springcloud-gateway-gateway9001</module>
+        <module>springcloud-consumer-feignclient80</module>
     </modules>
     <packaging>pom</packaging>
 
