为provider的get方法设置了fallback方法

--- a/springcloud-provider-datainfo8001/pom.xml
+++ b/springcloud-provider-datainfo8001/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
+        <!--Hystrix-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+
         <!--引入自定义的api通用包，可以使用Payment支付Entity-->
         <dependency>
             <groupId>highsec.microservice.springcloud</groupId>
