--- a/springcloud-consumer-feignclient80/pom.xml
+++ b/springcloud-consumer-feignclient80/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
+        <!--Hystrix-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+
         <!--作为Eureka Client-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
